[package]
name = "happy-gtk"
version = "0.1.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.0", features = ["v3_16"] }
gio = { version = "", features = ["v2_44"] }
glib = "*"
