[package]
name = "happy"
version = "0.1.0"
authors = ["Sergey Potapov <sergey.potapov@xbav.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["tokio_old"] }
iced_native = "*"
reqwest = "0.10.2"
derive_more = "*"
